# UTCN

./: .gitignore  README.md
First_Year/II/PLA/lectures/: date_memorie1.asm
First_Year/PC/homework/hw1/: pb1.c  pb2.c
First_Year/PC/homework/hw10/: Readme.md
First_Year/PC/homework/hw11/: Readme.md  main.c  sah.c
First_Year/PC/homework/hw12/: main.c  sah.h
First_Year/PC/homework/hw3/: pb1.c  pb2.c
First_Year/PC/homework/hw4/: pb1.c
First_Year/PC/homework/hw5/: Readme.md
First_Year/PC/homework/hw6/: pb1.c
First_Year/PLA/colocviu/Colocviu/: p1.asm  problema2.asm  recap2.asm  recap3.asm  recap_tema1_2.asm  recap_tema1_3.asm  recap_tema4_1.asm  s2prb2.asm
First_Year/PLA/labs/lab3/: prb3.asm  prb4.asm
First_Year/PLA/labs/s2/: s2ex1.asm
First_Year/PLA/labs/s4/: prb2.asm
First_Year/PLA/labs/s5/: prb1.asm  prb2.asm  s5ex1.asm
First_Year/PLA/labs/s6/: destination.txt  fisier.txt  iesire  input.txt  intrare.txt  prb1.asm  s6ex2.asm  source.txt  sursa.txt
First_Year/PLA/labs/s7/: p4.c  prb3.asm
First_Year/PLA/labs/s8/: pb2.asm  prb4.asm  s8ex4.asm
First_Year/PLA/labs/tema1/: ex1.asm
First_Year/PLA/labs/tema2/: prb1.asm  tema2.asm
First_Year/PLA/labs/tema3/: ex1.c
First_Year/PLA/labs/tema4/: pb1.asm
First_Year/PLA/lectures/: coprocesor1.asm
First_Year/PLA/lectures/curs7/: ex1.asm
First_Year/PLA/lectures/exercitii/: merge_sort_functii_pe_siruri.asm  merge_sort_functii_simple.asm  minim_macro.asm  proc_media_nr.asm  sebastyen.asm  sort.asm
First_Year/PSN/VHDL project/: Basys-3-Master.xdc  Sistem Inluminare Variabil.docx
First_Year/PSN/VHDL project/project/: project.xpr  vivado.jou  vivado_10100.backup.jou
First_Year/PSN/colocviu/COLOCVIU/: Basys-3-Master2.xdc  seq_detector.vhd
First_Year/PSN/colocviu/Modele rezolvate/: 14. Sumator-scãzãtor pe 4 biti – descriere comportamentalã.vhd  16. Memorie RAM 16 x 4 biÑi.vhd  17. Unitate aritmetico-logicã (+, -, x, _ SI, NU, SAU, SAU-EXCLUSIV).vhd  18. Bistabil D sincron, cu intrãri asincrone si cu proces pt. tact – descriere comportamentalã.vhd  20. Bistabil T sincron, cu intrãri asincrone si cu proces pt. tact – descriere comportamentalã.vhd  25. Memorie FIFO 4 x 4 biti.vhd  (+7 more)
Second_Year/ADC/Labs/: Laborator3.doc  Laborator5.doc  Laborator6.doc  Laborator7.doc  Laborator8.doc  Laborator9.doc  Lpractic1_Filtre RC.doc  Lpractic2_Studiul TB.doc  Surse de tensiune continua.doc
Second_Year/DB/Labs/: BD Scoala Script Oracle.sql
Second_Year/DB/Lectures/: Teorie Sintetizata Baze de Date.docx
Second_Year/EMS/labs/: Lucrari de laborator MES.docx  Tabele Lucrarea 8 Masurarea deplasarilor.docx
Second_Year/FA/Lectures/: Algoritmi Fundamentali.docx
Second_Year/II/ECG/Lab/L10/: Bezier.cpp  Bezier.h  Bezier1.cpp  CMakeLists.txt  main.cpp  vec2.h
Second_Year/II/ECG/Lab/L11/: CMakeLists.txt  auxiliary.h  main.cpp  mat3.h  projection.cpp  projection.h
Second_Year/II/ECG/Lab/L12/: CMakeLists.txt  Validator.h  main.cpp  rasterization.cpp  rasterization.h  rasterization.lib
Second_Year/II/ECG/Lab/L13/: CMakeLists.txt  auxiliary.h  globalVars.h  main.cpp  projection.cpp  rasterization.cpp  rasterization.h  tiny_obj_loader.h  transform.h  vec2.h
Second_Year/II/ECG/Lab/L4/: CMakeLists.txt  main.cpp  mat4.h  testTransform.cpp  transform.h
Second_Year/II/ECG/Lab/L5/: CMakeLists.txt  main.cpp  polygon.cpp  polygon.h  vec2.h
Second_Year/II/ECG/Lab/L6/: CMakeLists.txt  clip.cpp  clip.h  main.cpp  vec3.h
Second_Year/II/ECG/Lab/L8/: CMakeLists.txt  bresenham.cpp  bresenham.h  main.cpp
Second_Year/OOP/Lab1/: Main.html  MainClass.html  index.html  overview-tree.html  package-summary.html  type-search-index.js
Third_Year/AI/Lab1/: ex1.py
Third_Year/AI/Lab2/: file1.txt  file2.txt  main.py
Third_Year/AI/Lab3/: main.py  plot.py
Third_Year/AI/Lab4/: ex1.py  ex3.py  ex5.py  ex6.py  file1.txt
Third_Year/AI/l4/: ex3.py  ex4.py  hello.py
Third_Year/CN/: PT_initial_config.pkt  RC4.docx
Third_Year/II/CN/: CN5.docx  RC5.docx  lab.pkt
Third_Year/II/PS/: Project.docx
Third_Year/LFT/L5_ex-Lex-Yacc/: Makefile  a.out  input.in  lex.yy.c  output.txt  print-int.y  y.tab.c
Third_Year/LFT/test/: Input2.out  Input3.in  Input4.out  Input5.in  Input5.out  struct.l  struct.y  validator  y.tab.h
Third_Year/LFT/xml-json-translator/: Makefile  lexer.l  parser.y  test1.xml  test2.xml  test5.xml  y.tab.c
Third_Year/PI/PI-L6/: chain_code_output.txt
Third_Year/SI/DecissionTrees/: Example.ipynb  restaurant.csv
(+4091 files in other folders)
